# rv64gc-emu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MakeTests.cmake  README.md  main.cpp
.github/workflows/: build.yml  build_and_test.yml
cmake/: FindSDL2_ttf.cmake
source/: bus.cpp  cpu.cpp  csr.cpp  decoder.cpp  helper.cpp  interrupt.cpp  misc.cpp  mmu.cpp  screen.cpp
source/include/: bus.hpp  common_def.hpp  cpu.hpp  cpu_config.hpp  csr.hpp  decoder.hpp  helper.hpp  interupt.hpp  misc.hpp  mmu.hpp  screen.hpp  terminal.hpp
source/instructions/: btypeinsn.cpp  csrtypeinsn.cpp  ctypeinsn.cpp  fdtypeinsn.cpp  i64insn.cpp  loadinsn.cpp  otherinsn.cpp  r64insn.cpp  stypeinsn.cpp
source/instructions/include/: atomictype.hpp  btypeinsn.hpp  csrtypeinsn.hpp  ctypeinsn.hpp  fdtypeinsn.hpp  i64insn.hpp  itypeinsn.hpp  loadinsn.hpp  otherinsn.hpp  r64insn.hpp  rtypeinsn.hpp  stypeinsn.hpp
source/instructions/src/: atomictype.cpp  csrtypeinsn.cpp  ctypeinsn.cpp  fdtypeinsn.cpp  itypeinsn.cpp  otherinsn.cpp  rtypeinsn.cpp
source/peripherals/: clint.cpp  gpu.cpp  native_cli.cpp  plic.cpp  ram.cpp  syscon.cpp  virtio.cpp  virtio_blk.cpp
source/peripherals/include/: clint.hpp  gpu.hpp  plic.hpp  ram.hpp  syscon.hpp  virtio.hpp  virtio_blk.hpp
source/peripherals/src/: clint.cpp  gpu.cpp  native_cli.cpp  ram.cpp
tests/: test_cpu.cpp
